# Stock-trading

./: .env.example  .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.vitest.json  vite.config.ts
backend/: README.md  pyproject.toml
backend/src/app/: __init__.py  main.py
backend/src/app/api/: deps.py
backend/src/app/api/v1/: alerts.py  backtests.py  health.py  market.py  rankings.py
backend/src/app/core/: config.py
backend/src/app/services/: __init__.py
backend/src/app/services/alerts/: __init__.py  models.py  repository.py
backend/src/app/services/analysis/: __init__.py  fundamentals.py  indicators.py  models.py  pipeline.py  risk.py  scoring.py
backend/src/app/services/backtesting/: __init__.py  engine.py  models.py
backend/src/app/services/providers/: __init__.py  base.py  massive.py  massive_stub.py
backend/tests/: test_alerts_api.py  test_backtesting_engine.py  test_backtests_api.py  test_health.py  test_market_api.py  test_massive_provider.py  test_pipeline.py  test_rankings_api.py
data/: AAPL.csv  MSFT.csv  TSLA.csv
docs/: aktietipset_spec.yaml  analysis_engine_design.md  architecture_overview.md  backend_architecture.md  distribution_roadmap_plan.md  frontend_features_plan.md  security_data_plan.md  testing_quality_plan.md
electron/: main.cjs  preload.cjs
src/: App.tsx  styles.css
src/analysis/: indicators.ts  ranking.ts
src/components/: Layout.css  Layout.tsx
src/context/: AppDataContext.tsx
src/data/: sampleStocks.ts
src/services/: alerts.ts  backend.ts  (+2 more)
tests/: analysis.test.ts
(+16 files in other folders)
