[tool.poetry]
name = "aktietipset-backend"
version = "0.1.0"
description = "Backend API for AktieTipset – FastAPI + analysis engine scaffold."
authors = ["AktieTipset Team"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.27.1" }
pydantic = "^2.6.3"
pydantic-settings = "^2.2.1"
httpx = "^0.27.0"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
redis = "^5.0.3"
orjson = "^3.10.0"

[tool.poetry.group.analysis.dependencies]
pandas = "^2.2.1"
numpy = "^1.26.4"
scikit-learn = "^1.4.1"
pandas-ta = "^0.3.14b0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5"
ruff = "^0.3.2"
black = "^24.2.0"
mypy = "^1.8.0"

[tool.poetry.scripts]
aktie-api = "src.app.main:run"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
